--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -9,4 +9,14 @@
     //"imdbDatabase": "Host=cit.ruc.dk;Port=5432;Database=cit13;Username=cit13;Password=1qi0Imm97TrB"
     "imdbDatabase": "Host=localhost;Database=imdb;Username=postgres;Password=postgres"
   }
+{
+  "EmailSettings": {
+    "Mail": "RealEmailAddress@outlook.com",
+    "Password": "Password123",
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "EnableSsl": true
+  }
+}
+    
 }
