--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -11,7 +11,7 @@
   }
 {
   "EmailSettings": {
-    "Mail": "RealEmailAddress@outlook.com",
+    "Mail": "Placeholder123321@hotmail.com",
     "Password": "Password123",
     "Host": "smtp.office365.com",
     "Port": 587,
