--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -12,7 +12,7 @@
 {
   "EmailSettings": {
     "Mail": "Placeholder123321@hotmail.com",
-    "Password": "Password123",
+    "Password": "@Password321",
     "Host": "smtp.office365.com",
     "Port": 587,
     "EnableSsl": true
