--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -10,11 +10,20 @@
     "imdbDatabase": "Host=localhost;Database=imdb;Username=postgres;Password=postgres"
   },
 
-  "EmailSettings": {
-    "Mail": "Placeholder123321@hotmail.com",
-    "Password": "@Password321",
-    "Host": "smtp.office365.com",
-    "Port": 587,
-    "EnableSsl": true
-  }
+  //"EmailSettings": {
+  //  "Mail": "Placeholder123321@hotmail.com",
+  //  "Password": "@Password321",
+  //  "Host": "smtp.office365.com",
+  //  "Port": 587,
+  //  "EnableSsl": true
+  //}
+  
+    "EmailSettings": {
+      "Host": "sandbox.smtp.mailtrap.io",
+      "Port": 2525,
+      "EnableSsl": true,
+      "Mail": "9002798a455fce", 
+      "Password": "291d06924841c1" 
+    }
+  
 }
