email sandbox for testing

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -17,13 +17,14 @@
   //  "Port": 587,
   //  "EnableSsl": true
   //}
-  
-    "EmailSettings": {
-      "Host": "sandbox.smtp.mailtrap.io",
-      "Port": 2525,
-      "EnableSsl": true,
-      "Mail": "9002798a455fce", 
-      "Password": "291d06924841c1" 
-    }
+
+  "EmailSettings": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 2525,
+    "EnableSsl": true,
+    "Username": "9002798a455fce",
+    "Password": "291d06924841c1",
+    "FromAddress": "noreply@yourapp.com"
+  }
   
 }
