--- a/WebApi/appsettings..json
+++ b/WebApi/appsettings..json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
+  "ConnectionString": {
     //"imdbDatabase": "Host=cit.ruc.dk;Port=5432;Database=cit13;Username=cit13;Password=1qi0Imm97TrB"
     "imdbDatabase": "Host=localhost;Database=imdb;Username=postgres;Password=postgres"
   },
