--- a/WebApi/appsettings..json
+++ b/WebApi/appsettings..json
@@ -10,8 +10,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"imdbDatabase": "Host=cit.ruc.dk;Port=5432;Database=cit13;Username=cit13;Password=1qi0Imm97TrB"
-    "imdbDatabase": "Host=localhost;Database=imdb;Username=postgres;Password=postgres"
+   "imdbDatabase": "Host=cit.ruc.dk;Port=5432;Database=cit13;Username=cit13;Password=1qi0Imm97TrB"
+     // "imdbDatabase": "Host=localhost;Database=imdb;Username=postgres;Password=postgres"
       
   }
 
