--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -11,7 +11,9 @@
   },
 
   "ConnectionStrings": {
-    "imdbDatabase": "Host=cit.ruc.dk;Port=5432;Database=cit13;Username=cit13;Password=1qi0Imm97TrB"
+
+    "imdbDatabase": "Host=localhost;Database=hershop_database;Username=postgres;Password=postgres"
+    //    "imdbDatabase": "Host=cit.ruc.dk;Port=5432;Database=cit13;Username=cit13;Password=1qi0Imm97TrB"
   },
 
 
